--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "zustand": "^5.0.0-rc.2",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
